--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/munAlexey/russian-travel-react",
+  "homepage": "http://munAlexey.github.io/russian-travel-react",
   "name": "russian-travel-react",
   "version": "0.1.0",
   "private": true,
